IngressController/application/02-hello-world-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-service
  namespace: hwns
spec:
  selector:
    app: hello-world
  ports:
  - protocol: TCP
    port: 5678
    targetPort: 5678
  type: ClusterIP
