IngressController/application/04-hello-world-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-ingress
  namespace: hwns
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: hello-world.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hello-world-service
            port:
              number: 5678
  - http:  # This rule matches any host, including the IP address
      paths:
      - path: /rakshith/
        pathType: Prefix
        backend:
          service:
            name: hello-world-service
            port:
              number: 5678
